added about info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <!--<div class="testing"></div>-->
-        <div class="nameplate">
+        <div id="home" class="nameplate">
             <div>
                 <h1>Griffin Doyle</h1>
                 <h2>Graduate Software Engineer</h2>
@@ -26,14 +26,42 @@
 
                 <div class="navbar">
                     <ul>
-                        <li> Home </li>
-                        <li> About </li>
-                        <li> Projects </li>
-                        <li> Blog </li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a> </li>
+                        <li><a href="#projects">Projects</a> </li>
+                        <li><a href="#blog">Blog</a> </li>
                     </ul>
                 </div>
             </div>
             <img alt="profile" src="profile.jpg">
+        </div>
+        <div id="about" class="info-block">
+            <h2>About</h2>
+            <h3>Education</h3>
+            <p>The University of New South Wales: 2020 - 2024</p>
+            <p>Bachelor of Engineering (Honours) in Software</p>
+            <p>Bachelor of Science in Physics</p>
+            <h3>Experience</h3>
+            <p><b>Aurecon Project (Feb 2024 - April 2024):</b> As a project team member, I headed the research efforts to produce a recommendation report to
+                alleviate an increasingly unstable grid with the introduction of new renewable power sources. Our solution included a
+                myriad of technical and policy recommendations, including community batteries, innovative smart inverter technology at
+                premises and government subsidy initiatives. This work was done in tandem with industry experts from both Aurecon and
+                Transgrid who were presented with our insights throughout the research process.
+            </p>
+            <p><b>Coles Duty Manager (November 2019 - Present):</b>
+            Throughout my studies, I have worked as a Coles Duty Manager where I am tasked with ensuring the smooth operation of the
+            grocery store outside of daytime hours. I was promoted to this position as a recognition of my dedication to the company
+            and hard work. My role as a duty manager includes liasing with external contractors, time management, employee
+            coordination and conflict resolution.
+            <p>
+            <h3>Outside of Dev</h3>
+            Outside of working on my projects, I have some other interests such as video games, cooking and bouldering.
+        </div>
+        <div id="projects" class="info-block">
+            <h2>Projects</h2>
+        </div>
+        <div id="blog" class="info-block">
+            <h2>Blog</h2>
         </div>
     </body>
 </html>
